--- a/custom.css
+++ b/custom.css
@@ -37,14 +37,17 @@ body {
   gap: 10px;
 }
 
-.search-container .icon {
+.search-container .icon,
+.search-container .share-icon {
   display: flex;
   align-items: center;
   justify-content: center;
   padding: 8px;
+  cursor: pointer;
 }
 
-.search-container .icon svg {
+.search-container .icon svg,
+.search-container .share-icon svg {
   width: 20px;
   height: 20px;
   fill: #555;
@@ -61,10 +64,6 @@ body {
   width: 400px;
 }
 
-.search-container input:focus {
-  background: #e3e6ed;
-}
-
 .search-container select {
   padding: 10px;
   border: none;
@@ -75,8 +74,8 @@ body {
   cursor: pointer;
 }
 
-.search-container select:focus {
-  background: #e3e6ed;
+.search-container .share-icon:hover svg {
+  fill: #007bff; /* Change color on hover */
 }
 
 .menu-container {
@@ -275,11 +274,15 @@ body {
   padding: 15px;
   border-radius: 8px;
   text-align: center;
+  border: 1px solid #333;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: transform 0.2s, box-shadow 0.2s;
 }
 
 .card h3 {
-  font-size: 14px;
-  color: #aaa;
+  font-size: 20px;
+  color: #fff;
   margin-bottom: 8px;
 }
 
@@ -325,4 +328,468 @@ body {
   .inventory .sub-card {
     margin: 5px 0;
   }
+}
+
+.mapboxgl-popup-content {
+  background: #000;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+  padding: 0px 0px 0px;
+  pointer-events: auto;
+  position: relative;
+  min-width: 200px;
+}
+
+.mapboxgl-popup-content .hover-pin-title {
+  background: #000 !important;
+  color: #fff !important;
+  font-weight: 700;
+  margin: -15px 0 0;
+  text-align: left;
+  font-size: 14px;
+  border-radius: 3px;
+}
+
+.mapboxgl-popup-content .hover-pin-title p {
+  text-align: left;
+  margin: 0px 0px 8px;
+  text-transform: inherit;
+  display: flex;
+  -webkit-box-align: center;
+  align-items: center;
+  gap: 6px;
+  font-size: 12px;
+  font-weight: 400;
+  background: rgb(30, 30, 30);
+  padding: 4px 8px;
+  border-top-left-radius: 6px;
+  border-top-right-radius: 6px;
+}
+
+.mapboxgl-popup-content .hover-pin-title .container {
+  padding-left: 8px;
+  padding-right: 8px;
+  padding-bottom: 4px;
+}
+
+.mapboxgl-popup-content .hover-pin-title .row {
+  display: flex;
+  flex-direction: row;
+  -webkit-box-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  align-items: center;
+  -webkit-box-flex: 0;
+  cursor: inherit;
+  flex: inherit;
+  gap: inherit;
+  color: rgb(255, 255, 255);
+  font-size: 12px;
+  padding-bottom: 4px;
+  font-weight: 400;
+}
+
+.mapboxgl-popup-tip {
+  background-color: #111 !important; /* Dark color for the popup tip */
+}
+
+.loading-spinner {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: none; /* Initially hidden */
+}
+
+.spinner {
+  border: 4px solid #f3f3f3;
+  border-top: 4px solid #6366f1; /* Color of the spinner */
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  animation: spin 1s linear infinite;
+}
+
+.loading-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent overlay */
+  display: none; /* Initially hidden */
+  z-index: 9999; /* Ensure it is on top of other elements */
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+.graph-modal {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+.graph-modal.active {
+  display: flex;
+}
+/* Modal Content Styles */
+.graph-modal-content {
+  background-color: #1e1e1e;
+  border: 1px solid #333;
+  border-radius: 8px;
+  padding: 20px;
+  width: 80%;
+  max-width: 800px;
+  position: relative;
+}
+.graph-modal-content h1 {
+  margin-top: 0;
+  text-align: center;
+  color: white;
+}
+/* Close Button Styles */
+.close-graph-modal {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background: none;
+  border: none;
+  color: #e0e0e0;
+  font-size: 24px;
+  cursor: pointer;
+}
+/* Chart Canvas */
+canvas {
+  background-color: #1e1e1e;
+  border: 1px solid #333;
+  border-radius: 4px;
+  width: 100%;
+  height: 100%;
+}
+/* Slider Container */
+.slider-wrapper {
+  margin-top: 20px;
+  padding: 0 10px;
+}
+.slider-labels {
+  display: flex;
+  justify-content: space-between;
+  font-size: 0.9em;
+  margin-top: 5px;
+}
+/* Custom styles for noUiSlider handles & tooltips */
+.noUi-handle {
+  border: none;
+  background-color: #4caf50;
+}
+.noUi-connect {
+  background: #4caf50;
+}
+.graph-container {
+  display: flex;
+  gap: 20px; /* Space between elements */
+  align-items: center;
+  height: 400px;
+}
+
+.graph-left {
+  width: 33%; /* 1/3 of the space */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+
+/* Panel Slider Container (Fixed Height for Scrolling) */
+.panel-slider {
+  height: 100%; /* Adjust based on UI preference */
+  overflow: auto;
+  width: 100%;
+  position: relative;
+}
+.panel-slider::-webkit-scrollbar {
+  display: none;
+}
+
+/* Panel Container (Vertical Flow, Two Columns) */
+.panel-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr); /* Two columns */
+  gap: 10px;
+  transition: transform 0.3s ease-in-out;
+}
+
+.panel {
+  background-color: rgba(20, 20, 40, 0.9);
+  color: white;
+  font-size: 12px;
+  font-weight: bold;
+  padding: 5px;
+  border-radius: 8px;
+  border: 1px solid #333;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  border-color: white;
+  border-width: 2px;
+}
+
+.value-text {
+  color: #4caf50;
+  font-size: 20px;
+}
+
+.change-text {
+  color: #4caf50;
+  font-size: 12px;
+}
+
+.graph-right {
+    width: 66%;
+    height: 100%;
+}
+
+.graph-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 10px;
+    position: relative;
+}
+
+#graphTitle {
+    flex-grow: 1;
+    text-align: center;
+    font-size: 18px;
+    font-weight: bold;
+    color: white;
+}
+
+#graphSelect {
+    background: #222;
+    color: white;
+    border: 1px solid #444;
+    border-radius: 5px;
+    padding: 5px 10px;
+    font-size: 14px;
+    cursor: pointer;
+    margin-right: 20px;
+}
+
+
+
+.share-modal {
+  display: none; /* Hidden by default */
+  position: fixed;
+  z-index: 1000;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+/* Modal Content */
+.share-modal-content {
+  background: #1e1e1e;
+  padding: 15px;
+  border-radius: 8px;
+  text-align: center;
+  width: 280px; /* Reduced width */
+  box-shadow: 0px 4px 10px rgba(255, 255, 255, 0.1);
+  color: white;
+  position: relative;
+}
+
+.share-close {
+  position: absolute;
+  top: 8px;
+  right: 10px;
+  font-size: 18px;
+  cursor: pointer;
+  color: #fff;
+  background: none;
+  border: none;
+}
+
+/* Input & Button */
+.share-input {
+  display: flex;
+  gap: 10px;
+  margin-top: 15px;
+}
+
+.share-input input {
+  flex: 1;
+  padding: 6px;
+  border: 1px solid #444;
+  border-radius: 5px;
+  font-size: 12px;
+  background: #333;
+  color: #fff;
+  text-align: center;
+}
+
+.share-input button {
+  background: #ff5c72;
+  color: white;
+  border: none;
+  padding: 6px 10px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 12px;
+}
+
+.share-input button:hover {
+  background: #e04c60;
+}
+
+.no-arrow-popup .mapboxgl-popup-tip {
+  display: none;
+}
+
+.graph-title {
+  text-align: center;
+  flex-grow: 1;
+  color: white;
+}
+
+.graph-controls {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  gap: 5px;
+  margin-right: 10px;
+}
+
+#dataSelector {
+  padding: 5px;
+  font-size: 14px;
+  background-color: #1e1e1e;
+  color: white;
+  border: 1px solid #555;
+  border-radius: 4px;
+}
+
+.year-month-toggle-container {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  margin-top: 5px;
+}
+
+.year-month-toggle-button {
+  background-color: #333;
+  color: white;
+  border: 1px solid #555;
+  padding: 5px 10px;
+  border-radius: 20px;
+  cursor: pointer;
+  transition: background 0.3s;
+}
+
+.year-month-toggle-button.active {
+  background-color: #4caf50;
+}
+
+
+.year-month-switch {
+  position: relative;
+  display: inline-block;
+  width: 38px;
+  height: 23px;
+}
+
+/* Hide default HTML checkbox */
+.year-month-switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* The slider */
+.year-month-slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.year-month-slider:before {
+  position: absolute;
+  content: "";
+  height: 15px;
+  width: 15px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .year-month-slider {
+  background-color: #2196F3;
+}
+
+input:focus + .year-month-slider {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .year-month-slider:before {
+  -webkit-transform: translateX(15px);
+  -ms-transform: translateX(15px);
+  transform: translateX(15px);
+}
+
+/* Rounded year-month-sliders */
+.year-month-slider.round {
+  border-radius: 15px;
+}
+
+.year-month-slider.round:before {
+  border-radius: 50%;
+}
+
+.toggle-label {
+  font-size: 14px;
+  font-weight: bold;
+  color: #fff;
+}
+
+i[data-tooltip] {
+  position: relative;
+}
+
+i[data-tooltip]:hover::after {
+  content: attr(data-tooltip);
+  position: absolute;
+  top: -30px;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: rgba(0, 0, 0, 0.7);
+  color: #fff;
+  padding: 5px;
+  border-radius: 5px;
+  font-size: 12px;
+  white-space: nowrap;
 }
