--- a/custom.css
+++ b/custom.css
@@ -24,13 +24,13 @@ body {
 
 .search-container {
   position: absolute;
-  top: 10px;
+  top: 5px;
   left: 50%;
   transform: translateX(-50%);
   display: flex;
   align-items: center;
   background: white;
-  padding: 8px;
+  padding: 4px;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   z-index: 1;
@@ -42,7 +42,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 8px;
+  padding: 6px;
   cursor: pointer;
 }
 
@@ -55,20 +55,20 @@ body {
 
 .search-container input {
   flex: 1;
-  padding: 10px;
+  padding: 6px;
   border: none;
   outline: none;
-  font-size: 16px;
+  font-size: 14px;
   background: #f1f3f7;
   border-radius: 8px;
-  width: 400px;
+  width: 250px;
 }
 
 .search-container select {
-  padding: 10px;
+  padding: 6px;
   border: none;
   outline: none;
-  font-size: 16px;
+  font-size: 14px;
   background: #f1f3f7;
   border-radius: 8px;
   cursor: pointer;
@@ -80,7 +80,7 @@ body {
 
 .menu-container {
   position: absolute;
-  top: 50px;
+  top: 30px;
   left: 50%;
   transform: translateX(-50%);
   display: flex;
@@ -88,7 +88,7 @@ body {
   z-index: 1;
   margin-top: 20px;
   width: 800px;
-  height: 40px;
+  height: 30px;
   background-color: white;
   border-radius: 10px;
 }
@@ -103,7 +103,7 @@ body {
   justify-content: center;
   border-radius: 10px;
   align-items: center;
-  font-size: 20px;
+  font-size: 16px;
 }
 
 .my-menu-item:hover .my-dropdown-menu {
@@ -118,9 +118,9 @@ body {
   background: rgba(255, 255, 255, 0.9);
   border: 1px solid #ccc;
   border-radius: 5px;
-  padding: 10px;
+  padding: 6px;
   z-index: 2;
-  font-size: 16px;
+  font-size: 14px;
   min-width: 220px; /* Set a reasonable minimum width */
   width: max-content; /* Allow width to expand based on content */
   white-space: nowrap; /* Prevent text wrapping */
@@ -130,7 +130,7 @@ body {
 .my-dropdown-menu label {
   display: flex;
   align-items: center;
-  margin-bottom: 5px;
+  margin-bottom: 2px;
 }
 
 .my-dropdown-menu input[type="checkbox"] {
@@ -138,8 +138,8 @@ body {
 }
 
 .my-dropdown-menu input[type="checkbox"] + span {
-  width: 20px;
-  height: 20px;
+  width: 15px;
+  height: 15px;
   border-radius: 50%;
   display: inline-block;
   border: 2px solid #ccc;
@@ -150,8 +150,10 @@ body {
 }
 
 .my-dropdown-menu input[type="checkbox"]:checked + span {
-  background-color: green;
-  border-color: green;
+  background-image: url('checkbox.png');
+  background-size: 150%;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .my-dropdown-menu input[type="checkbox"]:checked + span::before {
@@ -163,7 +165,6 @@ body {
   width: 15px;
   height: 15px;
   border-radius: 50%;
-  background-color: white;
 }
 
 .close {
@@ -449,7 +450,7 @@ body {
   border: 1px solid #333;
   border-radius: 8px;
   padding: 20px;
-  width: 80%;
+  width: 90%;
   max-width: 1000px;
   position: relative;
 }
@@ -500,7 +501,8 @@ canvas {
   display: flex;
   gap: 20px; /* Space between elements */
   align-items: center;
-  height: 600px;
+  height: 400px;
+  overflow: scroll;
 }
 
 .graph-left {
@@ -522,7 +524,9 @@ canvas {
 .panel-slider::-webkit-scrollbar {
   display: none;
 }
-
+.graph-container::-webkit-scrollbar {
+  display: none;
+}
 /* Panel Container (Vertical Flow, Two Columns) */
 .panel-container {
   display: grid;
@@ -532,7 +536,7 @@ canvas {
 }
 
 .panel {
-  background-color: rgba(20, 20, 40, 0.9);
+  background-color: #1e1e1e;
   color: white;
   font-size: 16px;
   font-weight: bold;
@@ -544,6 +548,8 @@ canvas {
   border-color: white;
   border-width: 2px;
   cursor: pointer;
+  height: 120px;
+  word-break: break-all;
 }
 
 .value-text {
