--- a/custom.css
+++ b/custom.css
@@ -22,6 +22,26 @@ body {
   position: relative;
 }
 
+#suggestions {
+  position: absolute;
+  top: 45px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 80%;
+  max-width: 400px;
+  background-color: white;
+  border: 1px solid #ccc;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  display: none;
+}
+.suggestion-item {
+  padding: 10px;
+  cursor: pointer;
+}
+.suggestion-item:hover {
+  background-color: #f1f1f1;
+}
+
 .search-container {
   position: absolute;
   top: 5px;
@@ -33,7 +53,7 @@ body {
   padding: 4px;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  z-index: 1;
+  z-index: 3;
   gap: 10px;
 }
 
@@ -480,9 +500,25 @@ canvas {
 }
 /* Slider Container */
 .slider-wrapper {
-  margin-top: 20px;
-  padding: 0 10px;
+  margin-top: 10px;
+  padding: 0 20px;
 }
+
+.noUi-handle:after, .noUi-handle:before {
+  content: none !important;
+}
+
+.noUi-horizontal {
+  height: 10px !important;
+}
+
+.noUi-horizontal .noUi-handle {
+  width: 18px !important;
+  height: 18px !important;
+  right: -9px !important;
+  top: -5px !important;
+}
+
 .slider-labels {
   display: flex;
   justify-content: space-between;
@@ -492,7 +528,8 @@ canvas {
 /* Custom styles for noUiSlider handles & tooltips */
 .noUi-handle {
   border: none;
-  background-color: #4caf50;
+  background-color: #000000;
+  border-radius: 50%;
 }
 .noUi-connect {
   background: linear-gradient(to right, rgb(252, 210, 151) 0%, rgb(234, 84, 139) 25%, rgb(136, 47, 173) 50%, rgb(44, 66, 222) 75%, rgb(17, 178, 247) 100%);
@@ -501,8 +538,7 @@ canvas {
   display: flex;
   gap: 20px; /* Space between elements */
   align-items: center;
-  height: 400px;
-  overflow: scroll;
+  height: 470px;
 }
 
 .graph-left {
@@ -512,6 +548,9 @@ canvas {
   justify-content: center;
   align-items: center;
   height: 100%;
+  padding: 8px;
+  border: 2px solid white;
+  border-radius: 8px;
 }
 
 /* Panel Slider Container (Fixed Height for Scrolling) */
@@ -522,9 +561,6 @@ canvas {
   position: relative;
 }
 .panel-slider::-webkit-scrollbar {
-  display: none;
-}
-.graph-container::-webkit-scrollbar {
   display: none;
 }
 /* Panel Container (Vertical Flow, Two Columns) */
@@ -538,22 +574,25 @@ canvas {
 .panel {
   background-color: #1e1e1e;
   color: white;
-  font-size: 16px;
+  font-size: 14px;
   font-weight: bold;
-  padding: 8px;
+  padding: 4px;
   border-radius: 8px;
   border: 1px solid #333;
-  display: flex;
+  display: inline-block;
   flex-direction: column;
   border-color: white;
   border-width: 2px;
   cursor: pointer;
-  height: 120px;
-  word-break: break-all;
+  height: 80px;
+  text-align: center;
 }
 
 .value-text {
-  margin-top: 10px;
+  text-align: left;
+  hyphens: auto;
+  display: block;
+  margin-top: 5px;
   color: #ffffff;
   font-size: 12px;
 }
@@ -566,6 +605,9 @@ canvas {
 .graph-right {
     width: 66%;
     height: 100%;
+    padding: 8px;
+    border: 2px solid white;
+    border-radius: 8px;
 }
 
 .graph-header {
@@ -671,20 +713,27 @@ canvas {
 }
 
 .graph-title {
+  margin-top: 0px;
+  margin-bottom: 0px;
   text-align: center;
   flex-grow: 1;
   color: white;
 }
 
 .graph-description {
+  margin-top: 5px;
+  margin-bottom: 5px;
   color: white;
-  font-size: 16px; /* Adjust font size as needed */
-  margin-top: 10px; /* Add some spacing below the title */
+  font-size: 14px; /* Adjust font size as needed */
 }
 
 .graph-left-controls {
   display: flex;
   flex-direction: column;
+  margin-right: 10px;
+  border: 2px solid white;
+  padding: 8px;
+  border-radius: 8px;
 }
 
 .graph-controls {
